fix: tabs on mobile

--- a/src/theme.css
+++ b/src/theme.css
@@ -72,13 +72,16 @@ body {
   .navigation-menu .dcl.tabs .dcl.tabs-left .dcl.tab.active {
     border-left: none;
   }
+
   .navigation-menu .dcl.tabs .dcl.tabs-left .dg.Link .dcl.tab {
     color: var(--text);
     margin-right: 16px;
   }
+
   .navigation-menu .dcl.tabs .dcl.tabs-left .dg.Link:last-child .dcl.tab {
     margin-right: 0;
   }
+
   .navigation-menu .dcl.tabs .dcl.tabs-left .dcl.tab .active-bar {
     bottom: -10px;
     display: block;
@@ -89,5 +92,28 @@ body {
 @keyframes loading {
   to {
     background-position-x: -200%;
+  }
+}
+
+.navigation-menu.fullscreen .dcl.tabs .dcl.tabs-left {
+  display: flex;
+  flex-direction: row;
+  overflow: scroll;
+  width: 100%;
+  /* hide scrollbar IE and Edge */
+  -ms-overflow-style: none;
+  /* hide scrollbar Firefox */
+  scrollbar-width: none;
+  text-wrap: nowrap;
+  padding-right: 20px;
+}
+
+.navigation-menu.fullscreen .dcl.tabs .dcl.tabs-left::-webkit-scrollbar {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .navigation-menu.fullscreen .dcl.tabs .dcl.tabs-left {
+    width: unset;
   }
 }
